fixed alignment of dropContent children

--- a/Skomsky_HealthSystem/web/style/dropdownStyle.css
+++ b/Skomsky_HealthSystem/web/style/dropdownStyle.css
@@ -33,35 +33,40 @@
     padding: 0px;
     
 }
+.dropdown img {                      /* space combinator removes bottom margin and */
+        margin: 10px 10px 0px 10px;  /* padding from the icon of dropdown */
+        padding: 10px 10px 0px 10px; /* this will move dropContent up close to the bottom its */
+                                     /* corresponding icon */
+}
+
 /* don't delete this even though there are no style rules - js needs it, references it. */
 .dropHeader {
+    /* position: static; HTML elements are positioned static by default. */
 }
 
 .dropContent {
     color: black;
     background-color:  rgba(167, 228, 242, 1);;
 
-    right:0px;
     position: absolute;
+    left:50%;            /* align left edge of dropContent with center of dropDown */
+    margin-left: -20px;  /* move left edge back a bit */
+    
+    margin-top: 0px;     /* this will move dropContent up close to the bottom its */
+    padding-top: 0px;    /* corresponding icon */
+    
     font-size: 14px;
     z-index: 3;
 
-    margin: 0px;
-    padding: 0px;
-    
     line-height: 1.7em;
     border: 2px solid #bbbbbb;
     border-radius: 4px;
     letter-spacing: 1px;
-    text-align: left;
+    
+    width: max-content;  /* sets the size based on the space its children regardless if available or not */
+                         /* see https://developer.mozilla.org/en-US/docs/Web/CSS/width */
 
     visibility: hidden; /* initially you cannot see the dropContent elements */
 
     transition: 0s linear 0s; /* animate in 0 seconds pops open beneath dropHeader icon */
 }
-.dropdown img {                      /* space combinator removes bottom margin and */
-        margin: 10px 10px 0px 10px;  /* padding from the icon of .dropdown */
-        padding: 10px 10px 0px 10px; /* this will move it up close to the bottom its */
-                                     /* corresponding icon */
-}
-
